[package]
name = "cute-log"
version = "1.4.1"
authors = ["Douman <douman@gmx.se>"]
keywords = ["log"]
description = "Simple and cute logger for log crate"
readme = "README.md"
repository = "https://github.com/DoumanAsh/cute-log"
license = "Apache-2.0"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]
edition = "2018"

[dependencies.log]
version = "0"
default-features = false

[dependencies.time]
version = "0.2"
default-features = false
features = ["std"]
optional = true

[dependencies.termcolor]
version = "1"
optional = true

[target.'cfg(any(target_arch = "wasm32"))'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }

[features]
default = ["timestamp", "color"]
timestamp = ["time"]
color = ["termcolor"]
