[package]
name = "cute-log"
version = "2.0.1"
authors = ["Douman <douman@gmx.se>"]
keywords = ["log"]
description = "Simple and cute logger for log crate"
readme = "README.md"
repository = "https://github.com/DoumanAsh/cute-log"
license = "Apache-2.0"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]
edition = "2018"

[dependencies.log]
version = "0"
default-features = false

[target.'cfg(not(any(target_os = "android", target_arch = "wasm32")))'.dependencies.time]
version = "0.2"
default-features = false
features = ["std"]
optional = true

[target.'cfg(any(target_arch = "wasm32"))'.dependencies]
wasm-bindgen = "0.2"

[features]
default = ["timestamp"]
timestamp = ["time"]
