[package]
name = "cute-log"
version = "2.1.3"
authors = ["Douman <douman@gmx.se>"]
keywords = ["log"]
description = "Simple and cute logger for log crate"
readme = "README.md"
repository = "https://github.com/DoumanAsh/cute-log"
license = "Apache-2.0"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]
edition = "2018"

[dependencies.log]
version = "0"
default-features = false

[target.'cfg(target_os = "android")'.dependencies]
androidy-log = "1"

[target.'cfg(not(any(target_os = "android", target_arch = "wasm32")))'.dependencies.time]
version = "0.3.11"
default-features = false
features = ["std"]
optional = true

[target.'cfg(any(target_arch = "wasm32"))'.dependencies]
web-log = "1"

[features]
default = ["timestamp"]
timestamp = ["time"]
std = []

[package.metadata.docs.rs]
features = ["std"]
